test/error/rtc/con2.rzy
// error: loop in connection graph for sub

Dummy = Component
  out : signal();
  inp : slot();
    
elementary
  inp : slot()
    out();
  end
end

Con2 = Component
  inp : slot();
  out : signal();
    
composition
  sub1 : Dummy;
  sub2 : Dummy;
  
  inp -> out;
  sub1.out -> sub2.inp;
  sub2.out -> sub1.inp;
end

